# LLP-Netgame

./: .clang-tidy  CMakeLists.txt  README.md
-- GAMBLE CODE SAMPLES --/: READ ME.txt
-- GAMBLE CODE SAMPLES --/Handlers/: EnemyHandler.cpp  TurnHandler.h  UtilityHandler.cpp  WeaponHandler.cpp
-- GAMBLE CODE SAMPLES --/Managers/: GameManager.h  SceneManager.hpp
-- GAMBLE CODE SAMPLES --/Player/: Enemy.cpp  Entity.h  Weapon.h
-- GAMBLE CODE SAMPLES --/Scenes/: MapScene.cpp
-- GAMBLE CODE SAMPLES --/Utility/: ObjectPooler.cpp  Rect.cpp  Rect.hpp  Vector.cpp
Docum/: GDD_-_GAME_3_LLP.docx  TDD_LLP3-2.docx
apps/: CMakeLists.txt
apps/ASGEGame/: ASGEGame.cpp  ASGEGame.hpp  main.cpp
apps/ASGEGame/Managers/: GameManager.cpp  NetworkCommunicator.cpp  NetworkCommunicator.h  SceneManager.cpp
apps/Dedicated/: GameServer.cpp
apps/data/CustomUI/: Menu_Buttons.psd
apps/data/Json/: Enemydata.json  Gamedata.json  UIData.json  Utilitydata.json  Weapondata.json
include/gamelib/: Command.h  GameData.h  GameObject.hpp  GameVariables.h  Lobby.h  ObjectPooler.h  Random.h  RenderData.h  Vector.hpp
include/gamelib/Components/: GCNetClient.hpp  GCNetServer.hpp  GameComponent.hpp  ParticleComponent.h  SpriteComponent.hpp  TileComponent.h
include/gamelib/Handlers/: EnemyHandler.h  TreasureHandler.h  UtilityHandler.h  WeaponHandler.h
include/gamelib/Player/: Inventory.h  PlayerClasses.h  Utility.h
include/gamelib/Sound/: PlayList.h  Sound.h  SoundManager.h
include/gamelib/StateSystem/: InBattleState.h  InWorldState.h  LobbyState.h  MenuState.h  OptionsState.h  StartUpState.h  State.hpp  StateManager.h
include/gamelib/UISystem/: UIButton.h  UILabel.h  UIManager.h  UIObject.h  UIPanel.h  UITextBox.h
source/: CMakeLists.txt
source/Handlers/: WeaponHandler.cpp
source/components/: Command.cpp  GCNetClient.cpp  GCNetServer.cpp  GameData.cpp  GameObject.cpp  Lobby.cpp  ParticleComponent.cpp  Random.cpp  SpriteComponent.cpp  TileComponent.cpp
source/components/Handlers/: TreasureHandler.cpp  TurnHandler.cpp
source/components/Player/: Entity.cpp  Inventory.cpp  PlayerClasses.cpp  Utility.cpp  Weapon.cpp
source/components/Scenes/: DungeonScene.cpp
source/components/Sound/: PlayList.cpp  Sound.cpp  SoundManager.cpp
source/components/StateSystem/: InBattleState.cpp  InWorldState.cpp  LobbyState.cpp  MenuState.cpp  OptionsState.cpp  StartUpState.cpp  State.cpp  StateManager.cpp
source/components/UISystem/: UIButton.cpp  UILabel.cpp  UIManager.cpp  UIObject.cpp  UIPanel.cpp  UITextBox.cpp
